[package]
name = "krill-sync"
license = "BSD-3-Clause"
version = "0.1.2-dev"
edition = "2018"
build = "build.rs"
authors = [ "The NLnet Labs RPKI team <rpki-team@nlnetlabs.nl>" ]
description = "A tool to synchronize an RRDP and/or Rsync server with a remote RFC 8182 RRDP publication point."
repository = "https://github.com/NLnetLabs/krill-sync"
keywords = ["rpki", "routing-security", "bgp"]
readme = "README.md"

[dependencies]
anyhow = "1.0.32"
base64 = "0.12.3"
ctrlc = {version = "3.1.6", features = ["termination"] }
fern = "0.6.0"
log = "0.4.11"
rayon = "1.4.0"
scopeguard = "1.1.0"
serde = "1.0.116"
serde_json = "1.0.57"
structopt = { version = "0.3.18", default-features = false }
uuid = { version = "0.8.1", default-features = false }
retry = "1.1.0"
ring = "0.16.15"
walkdir = "2.3.1"
chrono = "0.4.18"
dashmap = "3.11.10"

[dependencies.routinator]
git = "https://github.com/ximon18/routinator"
rev = "31b37bd1"
default-features = false
features = [ "native-tls", "socks" ]

[build-dependencies]
rustc_version = "0.2.3"
vergen = "3.1.0"


# ------------------------------------------------------------------------------
# START DEBIAN PACKAGING
#
# Configurations for the cargo-deb cargo plugin which builds Debian packages in
# target/debian/ when invoked with: cargo deb. 
#
# TODO:
# - Build packages with GH Actions
# - Add man page?
# - Add changelog
#
# NOTE:
# - There is a single binary only (no daemon yet)

[package.metadata.deb]
name = "krill-sync"
priority = "optional"
section = "net"
extended-description-file = "debian/description.txt"
license-file = ["LICENSE", "0"]
depends = ""
maintainer-scripts = "debian/"
changelog = "Changelog"
copyright = "Copyright (c) 2021, NLnet Labs. All rights reserved."
assets = [
    ["target/release/krill-sync", "/usr/bin/krill-sync", "755"],
]

# List target variants

[package.metadata.deb.variants.ubuntu-xenial]

[package.metadata.deb.variants.ubuntu-bionic]

[package.metadata.deb.variants.ubuntu-focal]

[package.metadata.deb.variants.debian-stretch]

[package.metadata.deb.variants.debian-buster]

[package.metadata.deb.variants.debian-bullseye]

# END DEBIAN PACKAGING
# ------------------------------------------------------------------------------