[package]
name = "krill-sync"
version = "0.2.1"
license = "BSD-3-Clause"
edition = "2018"
build = "build.rs"
authors = [ "The NLnet Labs RPKI team <rpki-team@nlnetlabs.nl>" ]
description = "A tool to synchronize an RRDP and/or Rsync server with a remote RFC 8182 RRDP publication point."
repository = "https://github.com/NLnetLabs/krill-sync"
keywords = ["rpki", "routing-security", "bgp"]
readme = "README.md"

[dependencies]
anyhow = "1.0.32"
base64 = "0.12.3"
bytes = "1.0"
chrono = "0.4.23"
fern = "0.6.0"
filetime = "0.2"
fslock = "0.1.6"
log = "0.4.11"
reqwest = { version = "0.11.6", features = [ "native-tls", "blocking"] }
rpki = { version = "0.15.8", features = [ "repository", "rrdp", "serde-support" ] }
serde = { version = "1.0.116", features =  ["derive"] } 
serde_json = "1.0.57"
structopt = { version = "0.3.18", default-features = false }
uuid = { version = "1.2.2", default-features = false }

[build-dependencies]
rustc_version = "0.2.3"
vergen = "3.1.0"

[features]
static-openssl = [ "openssl/vendored" ]

# ------------------------------------------------------------------------------
# START DEBIAN PACKAGING
#
# Configurations for the cargo-deb cargo plugin which builds Debian packages in
# target/debian/ when invoked with: cargo deb. 
#
# TODO:
# - Build packages with GH Actions
# - Add man page?
# - Add changelog
#
# NOTE:
# - There is a single binary only (no daemon yet)

[package.metadata.deb]
name = "krill-sync"
priority = "optional"
section = "net"
extended-description-file = "pkg/debian/description.txt"
license-file = ["LICENSE", "0"]
depends = ""
maintainer-scripts = "pkg/debian/"
changelog = "target/debian/changelog" # this will be generated by the pkg workflow
copyright = "Copyright (c) 2021, NLnet Labs. All rights reserved."
assets = [
    ["target/release/krill-sync", "/usr/bin/krill-sync", "755"],
]

# List target variants

[package.metadata.deb.variants.ubuntu-xenial]

[package.metadata.deb.variants.ubuntu-bionic]

[package.metadata.deb.variants.ubuntu-focal]

[package.metadata.deb.variants.debian-stretch]

[package.metadata.deb.variants.debian-buster]

[package.metadata.deb.variants.debian-bullseye]

# END DEBIAN PACKAGING
# ------------------------------------------------------------------------------
