[package]
name = "krill-sync"
version = "0.3.1-dev"
license = "BSD-3-Clause"
edition = "2018"
authors = ["NLnet Labs <rpki-team@nlnetlabs.nl>"]
description = "A tool to synchronize an RRDP and/or Rsync server with a remote RFC 8182 RRDP publication point."
repository = "https://github.com/NLnetLabs/krill-sync"
keywords = ["rpki", "routing-security", "bgp"]
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
base64 = "0.12.3"
bytes = "1.9"
chrono = "0.4.39"
fern = "0.7.1"
filetime = "0.2"
fslock = "0.2.1"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["native-tls", "blocking"] }
rpki = { version = "0.18.4", features = ["ca", "rrdp"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
structopt = { version = "0.3.26", default-features = false }
uuid = { version = "1.12.0", features = ["serde"] }

[features]
default = ["reqwest/native-tls"]
static-tls = ["reqwest/native-tls-vendored"]

# ------------------------------------------------------------------------------
# START DEBIAN PACKAGING
#
# Configurations for the cargo-deb cargo plugin which builds Debian packages in
# target/debian/ when invoked with: cargo deb. 
#
# TODO:
# - Build packages with GH Actions
# - Add man page?
# - Add changelog
#
# NOTE:
# - There is a single binary only (no daemon yet)

[package.metadata.deb]
name = "krill-sync"
priority = "optional"
section = "net"
extended-description-file = "pkg/debian/description.txt"
license-file = ["LICENSE", "0"]
depends = ""
maintainer-scripts = "pkg/debian/"
changelog = "target/debian/changelog"                                  # this will be generated by the pkg workflow
copyright = "Copyright (c) 2021, NLnet Labs. All rights reserved."
assets = [["target/release/krill-sync", "/usr/bin/krill-sync", "755"]]

# List target variants
[package.metadata.deb.variants.ubuntu-focal]

[package.metadata.deb.variants.ubuntu-jammy]

[package.metadata.deb.variants.ubuntu-noble]

[package.metadata.deb.variants.debian-buster]

[package.metadata.deb.variants.debian-bullseye]

[package.metadata.deb.variants.debian-bookworm]

# END DEBIAN PACKAGING
# ------------------------------------------------------------------------------
